add presenters, views

--- a/presentation/src/main/res/layout/fragment_register.xml
+++ b/presentation/src/main/res/layout/fragment_register.xml
@@ -12,6 +12,7 @@
         android:id="@+id/indicator"
         android:layout_width="match_parent"
         android:layout_height="48dp"
+        android:layout_alignParentBottom="true"
         android:layout_gravity="bottom"
         android:layout_marginBottom="48dp"/>
 
