--- a/presentation/src/main/res/layout/fragment_models.xml
+++ b/presentation/src/main/res/layout/fragment_models.xml
@@ -16,13 +16,22 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
     </android.support.design.widget.AppBarLayout>
+    
+    
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/refresher"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-   <android.support.v7.widget.RecyclerView
-       android:id="@+id/recycleView"
-       app:layout_behavior="@string/appbar_scrolling_view_behavior"
-       android:layout_width="match_parent"
-       android:layout_height="match_parent">
-   </android.support.v7.widget.RecyclerView>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycleView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </android.support.v7.widget.RecyclerView>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
+
 
 
     <android.support.design.widget.FloatingActionButton
